# cfddns

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  update.py
cfddns/: __main__.py  cli.py  notification.py
etc/: cfddns.yml
src/: cfddns.py  main.rs  update.py
systemd/: cloudflare-ddns.service  cloudflare-ddns.timer  install.sh  status.sh  uninstall.sh
