[package]
name = "cfddns"
version = "1.6.1"
edition = "2021"
license-file = "LICENSE"
homepage = "https://github.com/uetchy/cfddns"
description = "Yet another DDNS client for Cloudflare"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[dependencies]
anyhow = "1.0.55"
tokio = { version = "1.17.0", features = ["full"] }
serde = { version = "1.0" }
serde_json = "1.0"
serde_yaml = "0.8.23"
once_cell = "1.9.0"
regex = "1.5.4"
reqwest = { version = "0.11.9" }
clap = { version = "3.1.3", features = ["derive"] }
cloudflare = "0.9.0"
lettre = { version = "0.10.0-rc.4", features = [
  "builder",
  "smtp-transport",
  "rustls-tls",
] }
