[tool.poetry]
name = "cfddns"
version = "1.5.0"
description = "DDNS client for CloudFlare DNS"
license = "MIT"
authors = ["Yasuaki Uechi <y@uechi.io>"]

[tool.poetry.scripts]
cfddns = "cfddns.cli:main"

[tool.poetry.dependencies]
python = "^3.6"
cloudflare = "^2.8.13"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
