[tool.poetry]
name = "cfddns"
version = "1.5.0"
description = "Ergonomic DDNS client for Cloudflare"
license = "MIT"
authors = ["Yasuaki Uechi <y@uechi.io>"]
readme = "README.md"
homepage = "https://github.com/uetchy/cfddns"
repository = "https://github.com/uetchy/cfddns"
keywords = ["cloudflare", "ddns"]
classifiers = [
  "Environment :: Console",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Topic :: Internet :: Name Service (DNS)",
]
include = ["LICENSE"]

[tool.poetry.scripts]
cfddns = "cfddns.cli:main"

[tool.poetry.dependencies]
python = ">= 3.6"
cloudflare = "^2.8.15"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
